Fix font sizes of product texts, rearrange bubbles and add easing-back function

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -7,6 +7,7 @@
 
 <body>
 <script type="text/javascript" src="jquery.min.js"></script>
+<script type="text/javascript" src="jquery-ui-1.10.3.custom.min.js"></script>
 <script type="text/javascript" src="amberpharm.js"></script>
 <script type="text/javascript" src="mail.js"></script>
 <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -266,82 +267,53 @@
   </div>
   <!-- home -->
   <div id="home311" class="bubble31 movable layer3"
-       data-startx="" data-starty=""
-       data-x="-350" data-y="0"></div>
+       data-startx="" data-x="-350"></div>
   <div id="home321" class="bubble32 movable layer3"
-       data-startx="" data-starty=""
-       data-x="-350" data-y="0"></div>
+       data-startx="" data-x="-350"></div>
   <div id="home322" class="bubble32 movable layer3"
-       data-startx="" data-starty=""
-       data-x="-100" data-y="0"></div>
+       data-startx="" data-x="-100"></div>
   <div id="home611" class="bubble61 movable layer11"
-       data-startx="" data-starty=""
-       data-x="-500" data-y="0"></div>
+       data-startx="" data-x="-500"></div>
   <div id="home621" class="bubble62 movable layer3"
-       data-startx="" data-starty=""
-       data-x="-300" data-y="0"></div>
+       data-startx="" data-x="-300"></div>
     <div id="home622" class="bubble62 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
-       <div class="bubble11"></div>
+       data-startx="" data-x=""></div>
   <!-- about -->
   <div id="about621" class="bubble62 movable layer3"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
-  <div id="about321" class="bubble32 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="about411" class="bubble41 movable layer1"
-       data-startx="" data-starty=""
-       data-x="-1000" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="about111" class="bubble11 movable layer1"
-       data-startx="" data-starty=""
-       data-x="-1000" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <!-- products -->
   <div id="products321" class="bubble32 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="products721" class="bubble32 movable layer3"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="products411" class="bubble41 movable layer1"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="products521" class="bubble52 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <!-- contact -->
   <div id="contact421" class="bubble42 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="contact721" class="bubble72 movable layer3"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="contact611" class="bubble61 movable layer1"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="contact621" class="bubble62 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="contact622" class="bubble62 movable layer3"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="contact711" class="bubble71 movable layer1"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <!-- impressum -->
   <div id="impressum721" class="bubble72 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="impressum121" class="bubble12 movable layer2"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
-  <div id="impressum321" class="bubble32 movable layer3"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="impressum611" class="bubble61 movable layer1"
-       data-startx="" data-starty=""
-       data-x="" data-y="0"></div>
+       data-startx="" data-x=""></div>
   <div id="preload"></div>
 </div>
 </body>
