Fix bug in product selection/frame for mozilla

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -7,10 +7,9 @@
 
 <body>
 <script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="jquery-ui-1.10.3.custom.min.js"></script>
 <script type="text/javascript" src="amberpharm.js"></script>
 <script type="text/javascript" src="mail.js"></script>
-<link rel="icon" href="images/favicon.png" type="image/png" />
+<link rel="icon" href="favicon.png" type="image/png" />
 <div id="loading">
   <p>loading</p>
   <div id="loading1" class="loading-img"></div>
@@ -195,7 +194,7 @@
         <p>Amberpharm GmbH</p>
         <br>
         <p>Marco Lorenzen GF</p>
-        <p>Otto-Hahn-Stra&szlig;</p>
+        <p>Otto-Hahn-Stra&szlig;e</p>
         <p>25813 Husum </p>
         <br><br>
         <p>Tel: 0700 80 30 20 10</p>
