last fixes (product navigation)

--- a/Amberpharm/amberpharm.html
+++ b/Amberpharm/amberpharm.html
@@ -57,12 +57,52 @@
           <img src="Startseite/Slideshow_Bild5.png" class="slide"/>
         </div>
       </div>
-    <div id="about-frame">
+    <div id="about-frame"></div>
+    <div id="about-frame-dummy">
       <div id="about-title">Hautpflege auf h&ouml;chstem Niveau!</div>
       <div id="about-text">
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
-  
-  Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet.
+Die Amberpharm GmbH forscht seit Jahrzehnten f&uuml;r die Kosmetikindustrie
+      mit innovativen Technologien an unz&auml;hligen neuen
+      Wirkstoffen aus dem Meer und ist Hersteller neuer
+      Kosmetikprodukte, mit Schwerpunkt medizinischer Kosmetik.
+        <br><br>
+Oft betreten wir dabei unerforschte Gebiete, die es erforderlich
+      machen neue Verfahrensweisen und Technologien zu entwickeln. In
+      Zusammenarbeit mit dem Alfred-Wegener-Institut f&uuml;r Polar-
+      u. Meeresforschung oder der Universit&auml;t Rostock f&uuml;r
+      Biowissenschaften und vielen weiteren renommierten Instituten
+      untermauern wir die hervorragenden Eigenschaften unserer
+      Produkte.
+        <br><br>
+
+Diese Vorgehensweise erm&ouml;glicht uns einen Wissensvorsprung zu den
+        zahllosen Mitbewerbern in diesem Sektor. Viele kleine und
+        gro&szlig;e Erfolge begleiten uns auf diesem Weg. So forschen wir
+        bereits seit &uuml;ber 15 Jahren an den Zusammenh&auml;ngen
+        von kolloidalem Silberwasser gegen Viren, Bakterien und
+        Pilzen, welches erst in den letzten 4 Jahren in der
+        Kosmetikindustrie als Microsilber Verwendung findet.
+        <br><br>
+
+Auch entwickelten wir eine neue Verfahrensweise f&uuml;r die
+        Extraktion der Rotalge, um die intensiven Wirkstoffe der
+        Palmaria-Palmata vollst&auml;ndig zu erhalten.
+        <br><br>
+
+Wir z&auml;hlen uns nicht zu den vielen Herstellern von Beautykosmetik,
+        die die ewige Jugend versprechen, sondern entwickeln gezielt
+        Produkte, die die Haut auf nat&uuml;rliche Art und Weise
+        effektiv sch&uuml;tzen, aufbauen oder regenerieren.
+        <br><br>
+
+Als Hersteller f&uuml;r Kosmetikprodukte, die auf der Welt einzigartig
+        sind, fertigen wir nach Kundenwunsch bis zum verkaufsfertigen
+        Produkt und sind dabei strikt gegen die Ausbeutung von
+        nat&uuml;rlichen Ressourcen, gegen Tierversuche, im Einklang
+        mit der Natur und der Umwelt...weltweit.
+        <br><br>
+
+...Hautpflege auf h&ouml;chstem Niveau!
         </div>
     </div>
     <div id="products">
@@ -260,6 +300,9 @@
         <br><br>
   &copy; Amberpharm GmbH, Husum Nordsee.<br>
   Alle Rechte vorbehalten.
+        <br><br>
+  Webdesign: <a href="http://www.carinamitc.de" alt="Carina mit C">Carina Kro&szlig;</a><br>
+  Programmierung: Sandra Dylus
           </p>
         </div>
      </div>
@@ -313,7 +356,34 @@
        data-startx="" data-x=""></div>
   <div id="impressum611" class="bubble61 movable layer1"
        data-startx="" data-x=""></div>
-  <div id="preload"></div>
+  <div id="preload">
+    <img src="Bubbles/Bubble1_1.png">
+    <img src="Bubbles/Bubble1_2.png">
+    <img src="Bubbles/Bubble2_1.png">
+    <img src="Bubbles/Bubble2_2.png">
+    <img src="Bubbles/Bubble3_1.png">
+    <img src="Bubbles/Bubble3_2.png">
+    <img src="Bubbles/Bubble4_1.png">
+    <img src="Bubbles/Bubble4_2.png">
+    <img src="Bubbles/Bubble5_1.png">
+    <img src="Bubbles/Bubble5_2.png">
+    <img src="Bubbles/Bubble6_1.png">
+    <img src="Bubbles/Bubble6_2.png">
+    <img src="Bubbles/Bubble7_1.png">
+    <img src="Bubbles/Bubble7_2.png">
+    <img src="Produkte/Alge.png">
+    <img src="Produkte/Auster.png">
+    <img src="Produkte/Salz.png">
+    <img src="Produkte/Kreis_aktiv.png">
+    <img src="Produkte/Kreis_ruhe.png">
+    <img src="Produkte/Unterseiten/backup_btn.png">
+    <img src="Produkte/Unterseiten/Elemente/alge_bild.png">
+    <img src="Produkte/Unterseiten/Elemente/alge_packshot.png">
+    <img src="Produkte/Unterseiten/Elemente/auster_bild.png">
+    <img src="Produkte/Unterseiten/Elemente/auster_packshot.png">
+    <img src="Produkte/Unterseiten/Elemente/salz_bild.png">
+    <img src="Produkte/Unterseiten/Elemente/salz_packshot.png">
+  </div>
 </div>
 </body>
 </html>
