Update static components plus .js-files of ckDesign

--- a/ck-design/gallery.html
+++ b/ck-design/gallery.html
@@ -13,6 +13,7 @@ media="screen" />
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="gallery.js"></script>
 <div id="content">
+  <div id="logo" class="link" data-href="index.html" data-click="#logo"></div>
   <div id="editorial" class="gallery" data-category="editorial"
        data-index="" data-descr=""></div>
   <div id="ci" class="gallery" data-category="ci" data-index="" data-descr=""></div>
@@ -20,11 +21,11 @@ media="screen" />
        data-index"" data-descr=""></div>
   <div id="etc" class="gallery" data-category="etc" data-index="" data-descr=""></div>
   <div id="gallery-box" class="gallery">
+    <div id="gallery-picture" class="gallery" data-category="editorial"></div>
     <div id="leftarrow" class="arrow"></div>
     <div id="rightarrow" class="arrow"></div>
     <div id="text"></div>
   </div>
-  <div id="logo" class="link" data-href="index.html" data-click="#logo"></div>
   <div id="thumbnail">
     <div id="thumbnail1" class="thumbnail scaleThreeForth"
       data-hoverobj="#thumbnail1" data-hoverclass="thumbnailHover"
